--- a/templates/phx_1s_stack/0/docker-compose.yml
+++ b/templates/phx_1s_stack/0/docker-compose.yml
@@ -1,5 +1,8 @@
 serviceone:
     image: leodotcloud/nato-alphabets
+    labels:
+        com.rancher.stack.location: "phx"
+        com.rancher.stack.size: "1"
     ports:
         - ${S1_PORT}:80
     environment:
