--- a/templates/phx_2s_stack/0/docker-compose.yml
+++ b/templates/phx_2s_stack/0/docker-compose.yml
@@ -1,5 +1,8 @@
 serviceone:
     image: leodotcloud/nato-alphabets
+    labels:
+        com.rancher.stack.location: "phx"
+        com.rancher.stack.size: "2"
     ports:
         - ${S1_PORT}:80
     environment:
@@ -7,6 +10,9 @@ serviceone:
 
 servicetwo:
     image: leodotcloud/nato-alphabets
+    labels:
+        com.rancher.stack.location: "phx"
+        com.rancher.stack.size: "2"
     ports:
         - ${S2_PORT}:80
     environment:
