--- a/templates/dockerlinks/0/rancher-compose.yml
+++ b/templates/dockerlinks/0/rancher-compose.yml
@@ -13,3 +13,9 @@
       type: "string"
       default: "k"
       required: true
+    - variable: "S3_ALPHABET"
+      label: "Service Three Alphabet"
+      description: "Alphabet to show on Service Three"
+      type: "string"
+      default: "l"
+      required: true
