--- a/templates/dockerlinks/0/docker-compose.yml
+++ b/templates/dockerlinks/0/docker-compose.yml
@@ -2,6 +2,11 @@ serviceone:
     image: leodotcloud/swiss-army-knife
     environment:
         - NATO_ALPHABET=${S1_ALPHABET}
+    labels:
+      io.rancher.sidekicks: serviceonesk
+
+serviceonesk:
+    image: leodotcloud/swiss-army-knife
 
 servicetwo:
     image: leodotcloud/swiss-army-knife
